--- a/src/app/cruise/cruise-modal/cruise-modal.component.html
+++ b/src/app/cruise/cruise-modal/cruise-modal.component.html
@@ -1,125 +1,130 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
-        <div class="modal-content">
-            <div class="modal-body ">
-                <div class="row">
-                    <div class="col-md-5">
-                        <div id="myCarousel" class="carousel slide h-100 style-slider" data-ride="carousel">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <div class="modal-body ">
+        <div class="row">
+          <div class="col-md-5">
+            <div id={{cruise._id}} class="carousel slide h-100 style-slider" data-ride="carousel">
 
-                            <!-- Wrapper for slides -->
-                            <div class="carousel-inner h-100">
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner h-100">
 
-                                <div *ngFor="let img of cruise.images;let i= index ;let isFirst=first" [ngClass]="{active:isFirst}" class="carousel-item h-100">
-                                    <img id={{i}} src={{img}} class="h-100">
-                                </div>
-                            </div>
-
-                            <!-- Left and right controls -->
-                            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-                                <span class="carousel-control-prev-icon"></span>
-                                <span class="sr-only">{{'Hotel.hotel.Previous'}}</span>
-                            </a>
-                            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-                                <span class="carousel-control-next-icon"></span>
-                                <span class="sr-only">{{'Hotel.hotel.Next'}}</span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-7 pl-2 pb-2 text-left">
-                        <h2 class='text-danger'>{{cruise.shipName}}</h2>
-                        <div>
-                            <span class="font-weight-bold">{{'Restaurant.category.Price'|translate}} : </span>
-                            <span class='text-success'>{{cruise.price}} {{'Hotel.hotel.EGP'|translate}}</span>
-                        </div>
-                        <div>
-                            <span class="font-weight-bold pb-2">{{'Cruise.deals.Sailing Date'|translate}} : </span>
-                            <span class='text-success'>{{cruise.sailingDate}} {{'Hotel.hotel.EGP'|translate}}</span>
-                        </div>
-
-                        <span class="font-weight-bold pb-2">{{'Cruise.deals.Activities'|translate}} : </span><br>
-                        <div class='row'>
-                            <div class='d-inline col-6'>
-                                <span *ngFor='let act of cruise.activities.slice(0,(cruise.activities.length/2)+1)'>
-                  <span><i class="fas fa-check  pl-3 pr-2"></i><span class='text-primary amnt'>
-                      {{act}}</span></span><br>
-                                </span>
-                            </div>
-
-                            <div class='d-inline col-6'>
-                                <span *ngFor='let act of cruise.activities.slice((cruise.activities.length/2)+1,cruise.activities
-                .length)'>
-                  <span><i class="fas fa-check pr-2"></i><span class='text-primary amnt pr-3'>
-                      {{act}}</span></span><br>
-                                </span>
-                            </div>
-                        </div>
-
-                        <span class="font-weight-bold pb-2">{{'Cruise.deals.Entertainment'|translate}} : </span><br>
-                        <div class='row'>
-                            <div class='d-inline col-6'>
-                                <span *ngFor='let ent of cruise.entertainment.slice(0,(cruise.entertainment.length/2)+1)'>
-                  <span><i class="fas fa-check  pl-3 pr-2"></i><span class='text-primary amnt'>
-                      {{ent}}</span></span><br>
-                                </span>
-                            </div>
-
-                            <div class='d-inline col-6'>
-                                <span *ngFor='let ent of cruise.entertainment.slice((cruise.entertainment.length/2)+1,cruise.entertainment
-                .length)'>
-                  <span><i class="fas fa-check pr-2"></i><span class='text-primary amnt pr-3'>
-                      {{ent}}</span></span><br>
-                                </span>
-                            </div>
-                        </div>
-
-                        <span class="font-weight-bold pb-2">{{'Cruise.deals.Dining'|translate}} : </span><br>
-                        <div class='row'>
-                            <div class='d-inline col-6'>
-                                <span *ngFor='let din of cruise.dining.slice(0,(cruise.dining.length/2)+1)'>
-                  <span><i class="fas fa-check  pl-3 pr-2"></i><span class='text-primary amnt'>
-                      {{din}}</span></span><br>
-                                </span>
-                            </div>
-
-                            <div class='d-inline col-6'>
-                                <span *ngFor='let din of cruise.dining.slice((cruise.dining.length/2)+1,cruise.dining
-                .length)'>
-                  <span><i class="fas fa-check pr-2"></i><span class='text-primary amnt pr-3'>
-                      {{din}}</span></span><br>
-                                </span>
-                            </div>
-                        </div>
-                        <div>
-                            <span class="font-weight-bold">{{'Cruise.deals.Passengers'|translate}} : {{'Cruise.deals.Crew'|translate}} </span>
-                            <span class='text-success'>{{cruise.travelers[0].passengers}} : {{cruise.travelers[0].crew}}</span>
-                        </div>
-                        <div>
-                            <span class="font-weight-bold">{{'Cruise.deals.Company Line'|translate}} : </span>
-                            <span class='text-success'>{{cruise.shipInfo[0].company_line}}</span>
-                        </div>
-                        <div>
-                            <span class="font-weight-bold">{{'Cruise.deals.Cruise Ship'|translate}}  : </span>
-                            <span class='text-success'>{{cruise.shipInfo[0].criuse_ship}}</span>
-                        </div>
-                        <div>
-                            <span class="font-weight-bold">{{'Cruise.deals.Launched'|translate}} :</span>
-                            <span class='text-success'>{{cruise.shipInfo[0].launched}}</span>
-                        </div>
-                    </div>
-
-
+                <div *ngFor="let img of cruise.images;let i= index ;let isFirst=first" [ngClass]="{active:isFirst}"
+                  class="carousel-item h-100">
+                  <img id={{i}} src={{img}} class="h-100">
                 </div>
+              </div>
 
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#{{cruise._id}}" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+                <span class="sr-only">{{'Hotel.hotel.Previous'}}</span>
+              </a>
+              <a class="carousel-control-next" href="#{{cruise._id}}" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+                <span class="sr-only">{{'Hotel.hotel.Next'}}</span>
+              </a>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="mr-3 float-end btn btn-warning button-raduis text-center" data-toggle="modal" data-target="#booking" (click)='bookNow()'>
-                    {{'Cruise.deals.Book Now'|translate}}
-        </button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">{{'Cruise.deals.Cancel'|translate}}</button>
+          </div>
+          <div class="col-md-7 pl-2 pb-2 text-left">
+            <h2 class='text-danger'>{{cruise.shipName}}</h2>
+            <div>
+              <span class="font-weight-bold">{{'Restaurant.category.Price'|translate}} : </span>
+              <span class='text-success'>{{cruise.price}} {{'Hotel.hotel.EGP'|translate}}</span>
             </div>
-            <app-cruise-booking></app-cruise-booking>
+            <div>
+              <span class="font-weight-bold pb-2">{{'Cruise.deals.Sailing Date'|translate}} : </span>
+              <span class='text-success'>{{cruise.sailingDate}} {{'Hotel.hotel.EGP'|translate}}</span>
+            </div>
+
+            <span class="font-weight-bold pb-2">{{'Cruise.deals.Activities'|translate}} : </span><br>
+            <div class='row'>
+              <div class='d-inline col-6'>
+                <span *ngFor='let act of cruise.activities.slice(0,(cruise.activities.length/2)+1)'>
+                  <span><i class="fas fa-check  pl-3 pr-2"></i><span class='text-primary amnt'>
+                      {{act}}</span></span><br>
+                </span>
+              </div>
+
+              <div class='d-inline col-6'>
+                <span *ngFor='let act of cruise.activities.slice((cruise.activities.length/2)+1,cruise.activities
+                .length)'>
+                  <span><i class="fas fa-check pr-2"></i><span class='text-primary amnt pr-3'>
+                      {{act}}</span></span><br>
+                </span>
+              </div>
+            </div>
+
+            <span class="font-weight-bold pb-2">{{'Cruise.deals.Entertainment'|translate}} : </span><br>
+            <div class='row'>
+              <div class='d-inline col-6'>
+                <span *ngFor='let ent of cruise.entertainment.slice(0,(cruise.entertainment.length/2)+1)'>
+                  <span><i class="fas fa-check  pl-3 pr-2"></i><span class='text-primary amnt'>
+                      {{ent}}</span></span><br>
+                </span>
+              </div>
+
+              <div class='d-inline col-6'>
+                <span *ngFor='let ent of cruise.entertainment.slice((cruise.entertainment.length/2)+1,cruise.entertainment
+                .length)'>
+                  <span><i class="fas fa-check pr-2"></i><span class='text-primary amnt pr-3'>
+                      {{ent}}</span></span><br>
+                </span>
+              </div>
+            </div>
+
+            <span class="font-weight-bold pb-2">{{'Cruise.deals.Dining'|translate}} : </span><br>
+            <div class='row'>
+              <div class='d-inline col-6'>
+                <span *ngFor='let din of cruise.dining.slice(0,(cruise.dining.length/2)+1)'>
+                  <span><i class="fas fa-check  pl-3 pr-2"></i><span class='text-primary amnt'>
+                      {{din}}</span></span><br>
+                </span>
+              </div>
+
+              <div class='d-inline col-6'>
+                <span *ngFor='let din of cruise.dining.slice((cruise.dining.length/2)+1,cruise.dining
+                .length)'>
+                  <span><i class="fas fa-check pr-2"></i><span class='text-primary amnt pr-3'>
+                      {{din}}</span></span><br>
+                </span>
+              </div>
+            </div>
+            <div>
+              <span class="font-weight-bold">{{'Cruise.deals.Passengers'|translate}} : {{'Cruise.deals.Crew'|translate}}
+              </span>
+              <span class='text-success'>{{cruise.travelers[0].passengers}} : {{cruise.travelers[0].crew}}</span>
+            </div>
+            <div>
+              <span class="font-weight-bold">{{'Cruise.deals.Company Line'|translate}} : </span>
+              <span class='text-success'>{{cruise.shipInfo[0].company_line}}</span>
+            </div>
+            <div>
+              <span class="font-weight-bold">{{'Cruise.deals.Cruise Ship'|translate}} : </span>
+              <span class='text-success'>{{cruise.shipInfo[0].criuse_ship}}</span>
+            </div>
+            <div>
+              <span class="font-weight-bold">{{'Cruise.deals.Launched'|translate}} :</span>
+              <span class='text-success'>{{cruise.shipInfo[0].launched}}</span>
+            </div>
+          </div>
 
 
         </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="mr-3 float-end btn btn-warning button-raduis text-center" data-toggle="modal"
+          data-target="#booking" (click)='bookNow()'>
+          {{'Cruise.deals.Book Now'|translate}}
+        </button>
+        <button type="button" class="btn btn-secondary"
+          data-dismiss="modal">{{'Cruise.deals.Cancel'|translate}}</button>
+      </div>
+      <app-cruise-booking></app-cruise-booking>
+
+
     </div>
+  </div>
 </div>
