--- a/src/app/hotels/hotel/hotel.component.html
+++ b/src/app/hotels/hotel/hotel.component.html
@@ -24,7 +24,7 @@
 
         <div *ngFor="let img of hotel.images;let i= index ;let isFirst=first" [ngClass]="{active:isFirst}"
           class="carousel-item h-100">
-          <img id={{i}} src={{img}} class="h-100">
+          <img id={{i}} src={{img}} class="imageSlider">
         </div>
       </div>
 
