--- a/src/app/cruise/cruise-modal/cruise-modal.component.html
+++ b/src/app/cruise/cruise-modal/cruise-modal.component.html
@@ -12,7 +12,7 @@
 
                 <div *ngFor="let img of cruise.images;let i= index ;let isFirst=first" [ngClass]="{active:isFirst}"
                   class="carousel-item h-100">
-                  <img id={{i}} src={{img}} class="h-100">
+                  <img id={{i}} src={{img}} class="imageSlider">
                 </div>
               </div>
 
