--- a/src/app/hotels/date-section/date-section.component.html
+++ b/src/app/hotels/date-section/date-section.component.html
@@ -20,7 +20,9 @@
     <div class="row">
       <!-- <div class="col-2"></div> -->
       <div class="col-12">
-        <h2 class="mt-5 ml-5">{{'Hotel.date.Makassar'|translate}}</h2>
+        <!--  {{'Hotel.date.Makassar'|translate}} -->
+        <h2 class="mt-5 ml-5">{{cityName}} Hotels To Stay
+        </h2>
       </div>
       <!-- <div class="col-3"></div> -->
     </div>
